2004-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/bundle.py:
	* flumotion/test/test_bundle.py:
	  test unbundler

2004-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/bundle.py:
	* flumotion/test/test_bundle.py:
	  rework bundle to also have unbundler

2004-09-14  Johan Dahlin  <johan@gnome.org>

	* bin/runtest.in (olddir): script to run tests

	* flumotion/component/http/http.py (MultifdSinkStreamer.notify_caps_cb) 
	(MultifdSinkStreamer.update_ui_state): Use idle_add to emit
	signals, to ensure that they are sent from the main thread

	* flumotion/worker: Commit worker, still WIP

	* flumotion/test/test_log.py:
	Add, 2 tests skipped now, will handle them later

2004-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	* data/glade/http.glade:
	  add UI for http component

2004-09-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/: Move testsuite over here and use trial.

	* flumotion/manager/worker.py (WorkerHeaven): Clean up, almost
	ready for general consumption.

	* flumotion/manager/component.py (ComponentAvatar.getListenHost):
	Support new and old twisted code for getting the host

	* flumotion/manager/admin.py (AdminAvatar):
	I don't implement IHeaven, really.

	* flumotion/manager/main.py: New file, currently unused

	* flumotion/common/config.py (ConfigEntry.getWorker): 
	Add dummy getWorker() method

	* testsuite/tests/log.py (TestLog.testLogHandlerAssertion): Add test

	* flumotion/utils/log.py (addLogHandler): Doc fix, add pedantic
	assertion.

2004-09-13  Johan Dahlin  <johan@gnome.org>

	* conf/minmal.xml: add a minimal configuration for testing purposes.

2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* flumotion/utils/log.py:
	* testsuite/tests/log.py:
	  add tests for logging

2004-09-13  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/bundle.py:
	* flumotion/component/component.py: